// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonText control to the left 1`] = `
<ButtonText
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  id={null}
  imageFile=""
  justify={0}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  noicon={false}
  notheme={false}
  notooltip={false}
  obj="ButtonText"
  onClick={[Function]}
  padding={null}
  ripple={true}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "blue",
      "borderColor": "green",
      "color": "white",
    }
  }
  testing={true}
  text="test text"
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test disabling of a ButtonText control 1`] = `
<ButtonText
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  id={null}
  imageFile=""
  justify={1}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  noicon={false}
  notheme={false}
  notooltip={false}
  obj="ButtonText"
  onClick={[MockFunction]}
  padding={null}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test making a ButtonText control invisible 1`] = `
<ButtonText
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  id={null}
  imageFile=""
  justify={1}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  noicon={false}
  notheme={false}
  notooltip={false}
  obj="ButtonText"
  onClick={[MockFunction]}
  padding={null}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of ButtonText props object 1`] = `
Object {
  "backgroundColor": null,
  "border": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "iconName": "bomb",
  "id": null,
  "imageFile": "",
  "justify": 1,
  "left": null,
  "location": "none",
  "maxHeight": null,
  "maxWidth": null,
  "minHeight": null,
  "minWidth": null,
  "noborder": false,
  "noedit": false,
  "nohover": false,
  "noicon": false,
  "notheme": false,
  "notooltip": false,
  "obj": "ButtonText",
  "onClick": [Function],
  "padding": null,
  "ripple": true,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "text": "",
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of ButtonText props object 2`] = `
Object {
  "backgroundColor": null,
  "border": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "iconName": "bomb",
  "id": null,
  "imageFile": "",
  "justify": 1,
  "left": null,
  "location": "none",
  "maxHeight": null,
  "maxWidth": null,
  "minHeight": null,
  "minWidth": null,
  "noborder": false,
  "noedit": false,
  "nohover": false,
  "noicon": false,
  "notheme": false,
  "notooltip": false,
  "obj": "ButtonText",
  "onClick": [Function],
  "padding": null,
  "ripple": true,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "text": "",
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;
